fixed horizontal scrolling

--- a/navbar.css
+++ b/navbar.css
@@ -8,6 +8,7 @@ body{
 background-color: #ebebeb;
 margin:0px;
 padding:0px;
+overflow-x: hidden;
 }
 
 ul{
@@ -62,7 +63,7 @@ margin-right:30px;
 
 			header.large li{
 				margin-top: 45px;
-	
+				margin-right:40px;
 			}
 
 
@@ -73,7 +74,7 @@ margin-right:30px;
 
 			header.small img{ 
 				width: 287px; 
-				height: 69px; 
+				height: 60px; 
 				margin-top: -10px; 
 			}
 
