--- a/slide.css
+++ b/slide.css
@@ -10,16 +10,13 @@ width:100%;
 height:auto;
 margin-top:50px;
 }*/
-.content{
-width:100%;
-height:500px;
-background-color:blue;
 
 }
 .slideshow { overflow: hidden;background-color:black; }
-.slideshow figure img { width: 20%; float: left;  }
+.slideshow figure img { width: 20%; float: left; }
 .slideshow figure { 
 
+	
   position: relative;
   width: 500%;
   margin: 0;
@@ -41,3 +38,6 @@ background-color:blue;
 95% { left: -300%; }
 100% { left: -400%; }
 }
+
+
+
